  Users of the UserLinkRenderer service should use LinkRenderer.
* User::getInstanceForUpdate() has been deprecated and now emits deprecation
  warnings. In most cases (such as for use with UserOptionsManager) calling
  this method is no longer needed. In other cases use getInstanceFromPrimary()
  instead.
* Some static methods in Xml, deprecated in 1.42, now emit deprecation warnings:
  - Xml::label() — use Html::label() instead,
  - Xml::listDropdown(), and
  - Xml::listDropdownOptions() & Xml::listDropdownOptionsOoui().
* Language::emphasize() is unused, got deprecated, and will be removed in the
  next version.
* All public properties of ConverterRule have been deprecated and now emit
  deprecation warnings.  They will be made private in a future release.
* Modification of the namespaces key will no longer modify associated pages
  in the SkinTemplateNavigation::Universal hook (T412238).
* All skins are now required to declare the menus they render in their
  skin definition (per T409774). In future this will allow for
  skin optimizations.
* …

=== Other changes in 1.46 ===

* …

== Compatibility ==

MediaWiki 1.46 requires PHP 8.2.0 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

  <https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation>

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:
